home page modified

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +10,13 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 </head>
+
 <body>
-    <div class="row">
+    <div class="d-flex align-items-center justify-content-center vh-100">
         <button id="login">Log in</button>
         <button id="register">register</button>
     </div>
     <script src="./app.js" type="module"></script>
 </body>
+
 </html>
