login & register modified

--- a/login.html
+++ b/login.html
@@ -23,6 +23,8 @@
             </div>
         </div>
         <input type="submit" value="daxil ol">
+        <br>
+        <button id="register">register</button>
     </form>
 
     <script src="./login.js" type="module"></script>
