--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="error" class="text-danger"></div>
-    <form action="auth/register" method="" id="register-form">
+    <form action="auth/register" method="" id="register-form" class="d-flex flex-column align-items-center justify-content-center vh-100">
         <div class="row">
             <div class="col-12">
                 username: <input type="text" id="username">
@@ -28,6 +28,8 @@
             </div>
         </div>
         <input type="submit" value="qeydiyyat ol">
+        <br>
+        <button id="login">login</button>
     </form>
 
     <script src="./register.js" type="module"></script>
